<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".ui.welcome.RegisterActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="130dp" />

    <com.google.android.material.textfield.TextInputEditText

        android:id="@+id/regiName"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_action_user"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"

        android:textColorHint="#F0F8FF"
        android:textSize="16dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <com.google.android.material.textfield.TextInputEditText

        android:id="@+id/regiMail"


        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_action_email"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#F0F8FF"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regiName" />

    <com.google.android.material.textfield.TextInputEditText


        android:id="@+id/regiPass"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_action_pass"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColorHint="#F0F8FF"
        android:textSize="16dp"
        android:textColor="#FFFFFF"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regiMail" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/regiPass2"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_action_pass"
        android:ems="10"
        android:hint="Confirm password"
        android:inputType="textPassword"
        android:textColorHint="#F0F8FF"
        android:textSize="16dp"
        android:textColor="#FFFFFF"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regiPass" />

    <com.google.android.material.button.MaterialButton

        android:id="@+id/regiButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/reg_btn_style"
        android:backgroundTint="#FD597A"
        android:text="Register"
        android:textColor="#ffffff"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regiPass2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/lgnInstead"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="Already have an account? Login here"
        android:textAllCaps="false"

        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regiButton"
        app:layout_constraintVertical_bias="0.16000003" />
</androidx.constraintlayout.widget.ConstraintLayout>